<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stack_description_heading"
        android:id="@+id/textView21"
        android:gravity="center"
        android:textSize="25sp"
        android:background="#9e77c8"
        android:textColor="#fdfcfc"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/stack_description_link"
        android:id="@+id/textViewLink"
        android:textColor="#052cd8"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="8dp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/queue_description_text"
                android:id="@+id/textView22"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>