<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/queue_description_heading"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#f1a965"
        android:background="#0b0c13" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/stack_description_link"
        android:id="@+id/textViewLink"
        android:textSize="20sp"
        android:textColor="#3d0bef" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3"
        android:layout_gravity="center_horizontal"
        android:fillViewport="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/queue_description_text"
                android:id="@+id/textView24"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:textStyle="italic"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>